[metadata]
name = sigal
description = Simple static gallery generator
long_description = file: README.rst
author = Simon Conseil
author_email = contact@saimon.org
url = https://github.com/saimn/sigal
keywords = gallery, static, generator, image, video, galleria
license = MIT License
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Internet :: WWW/HTTP
    Topic :: Multimedia :: Graphics :: Viewers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.5
setup_requires =
    setuptools_scm
install_requires =
    blinker
    click
    Jinja2
    Markdown
    Pillow>=4.0.0
    pilkit

[options.extras_require]
all = boto; brotli; feedgenerator; zopfli

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    sigal = sigal:main

[check-manifest]
ignore =
    .coveragerc
    tests
    readthedocs.yml

[flake8]
ignore = E731, W504
