[metadata]
name = sigal
description = Simple static gallery generator
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Simon Conseil
author_email = contact@saimon.org
url = https://github.com/saimn/sigal
keywords = gallery, static, generator, image, video, galleria
license = MIT License
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Multimedia :: Graphics :: Viewers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find_namespace:
python_requires = >=3.8
install_requires =
    blinker
    click
    Jinja2>=2.7
    Markdown
    Pillow>=8.0.0
    pilkit
    natsort

[options.extras_require]
all = boto; brotli; feedgenerator; zopfli; cryptography
tests = pytest; pytest-cov
docs = Sphinx; alabaster; cryptography

[options.packages.find]
where = src

[options.package_data]
sigal =
    plugins/**
    themes/**

[options.entry_points]
console_scripts =
    sigal = sigal:main

[check-manifest]
ignore =
    .coveragerc
    tests
    readthedocs.yml

[flake8]
# ignore = E731,W504,E501
max-line-length = 88
ignore = E203,W503,E731

[isort]
profile = black
known_third_party=blinker,click,jinja2,markdown,natsort,PIL,Pillow,pilkit

[coverage:run]
source = sigal
omit =
    /tmp/*
    tests/*

[coverage:paths]
source =
    src/sigal
    */.tox/*/lib/python*/site-packages/sigal

[coverage:report]
exclude_lines =
  pragma: no cover
  def __repr__
  raise AssertionError
  raise NotImplementedError
  if __name__ == .__main__.:
  except KeyboardInterrupt
  except ImportError
